Formatted all codes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
     <link rel="icon" href="img/bookmark-svgrepo-com.svg">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="container">
-        <h1 id="sourceCode"><a href="https://github.com/JatinKevlani/bookmark-manager.git" target="_blank">Bookmarks Manager - JatinKevlani</a></h1>
+        <h1 id="sourceCode"><a href="https://github.com/JatinKevlani/bookmark-manager.git" target="_blank">Bookmarks
+                Manager - JatinKevlani</a></h1>
         <div class="primary">
             <h2 id="primaryHeader">Primary Bookmarks</h2>
             <div id="primaryMarks"></div>
@@ -25,4 +28,5 @@
     </div>
     <script src="script/script.js"></script>
 </body>
+
 </html>
